Update CommonUtils.java